# RayEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RayEngine.sln  premake5.lua
RayEngine/: 1.ppm  Atmosphere.cu  Atmosphere.cuh  BoundingVolume.h  CMakeLists.txt  CUDABoundingVolume.cu  CUDARayTracing.cu  CUDARayTracing.cuh  Camera.cpp  Camera.h  Character.cpp  Character.h  Color.cpp  Color.h  Cow.cpp  Cow.h  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  Floor.cpp  Floor.h  GPUBoundingBox.h  Glass.cpp  Glass.h  Grid.cpp  Grid.h  KDThreeGPU.cpp  KDThreeGPU.h  KDTree.cpp  KDTree.h  KDTreeGPUUtills.cpp  KDTreeGPUUtills.h  Light.cpp  Light.h  MainWindow.cpp  MainWindow.h  Material.cpp  Material.h  MeshAdjacencyTable.cpp  MovableCamera.cpp  MovableCamera.h  (+43 more)
RayEngine/Meshes/: 1.ppm  Diamond.mtl  Love.rsdf  cat.ply  character.mtl  character.ply  cow.mtl  cube.mtl  de_dust2.mtl  stratocaster.ply
RayEngine/Platform/OpenGL/: imgui_glfw_implementation.cpp  imgui_opengl_imlementation.cpp
RayEngine/Platform/Windows/: WindowsInput.cpp  WindowsInput.h
RayEngine/filesystem/: path.h
RayEngine/includes/: ObjFileReader.h  glad.c  helper_gl.h
RayEngine/includes/GL/: example_glut_opengl2.vcxproj
RayEngine/includes/filesystem/: resolver.h
RayEngine/includes/glad/: glad.h
RayEngine/includes/imgui/: imgui.cpp  (+5 more)
RayEngine/libs/: glfw3.lib
RayEngine/src/: BoundingVolume.cpp  BoundingVolume.h  Camera.cpp  Camera.h  Character.cpp  Character.h  Cow.cpp  Cow.h  Floor.cpp  Floor.h  GPUBoundingBox.h  Glass.cpp  Glass.h  Grid.cpp  Grid.h  Input.h  KDThreeGPU.cpp  KDThreeGPU.h  KDTree.cpp  KDTree.h  KDTreeGPUUtills.cpp  KDTreeGPUUtills.h  Light.h  Material.cpp  Material.h  MeshAdjacencyTable.cpp  MeshAdjacencyTable.h  MeshObject.cpp  MouseButtonCodes.h  MovableCamera.cpp  MovableCamera.h  ObjFileReader.h  Object.cpp  Object.h  ObjectComponent.cpp  ObjectComponent.h  PerlinNoise.cpp  PerlinNoise.h  Plane.cpp  Plane.h  (+35 more)
(+110 files in other folders)
